Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26975

Code Pasting: Paste snippet does not automatically open General Messages

XMLWordPrintable

    • macOS
    • bb59a00229 (qt-creator/qt-creator/7.0) bb59a00229 (qt-creator/qt-creator/master) bb59a00229 (qt-creator/tqtc-qt-creator/7.0) bb59a00229 (qt-creator/tqtc-qt-creator/master) bb59a00229 (qt-creator/tqtc-qt-creator/qds-3.1)

      Instead the general messages tab flashes red briefly. Without having used this functionality before I wasn't sure whether or not the pasting was actually successful or not.

        For Gerrit Dashboard: QTCREATORBUG-26975
        # Subject Branch Project Status CR V

            con Eike Ziller
            max.goldstein Maximilian Goldstein
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes