Fix issues with showing code pasting URL

- use common signal for posting output for fileshare protocol, so it
  correctly behaves wrt the settings
- flash even when not opening the output pane when showing the output
- MessageManager::writeDisrupting should switch the output pane even if
  another output pane is currently open (which enforced with
  IOutputPane::WithFocus)

Fixes: QTCREATORBUG-26975
Change-Id: I51586eaca826f81f7e72f147fce7e72cbf639c6c
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>